# attendance_book_VK

./: .gitignore  main.py  setup.py
src/: README.md  main.py  pyproject.toml
src/api/: __init__.py  fastapi_server.py
src/bot/: __init__.py  vk_bot.py
src/config/: config.py
src/contracts/: contracts.py
src/database/: __init__.py  database.py
src/sync/: __init__.py  google_sync.py
